--- a/settings/VSCode-settings.json
+++ b/settings/VSCode-settings.json
@@ -9,5 +9,6 @@
     "editor.quickSuggestionsDelay": 0,
     "editor.glyphMargin": false,
     "workbench.activityBar.location": "top",
-    "editor.inlayHints.fontFamily": "JetBrains Mono"
+    "editor.inlayHints.fontFamily": "JetBrains Mono",
+    "editor.scrollBeyondLastLine": true
 }
